--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,1 +1,42 @@
-<p>login works!</p>
+<app-alert *ngIf="showAlert" [color]="alertColor">
+  {{alertMsg}}
+</app-alert>
+
+<form #loginForm="ngForm" (ngSubmit)="login()">
+  <!-- Email -->
+  <div class="mb-3">
+    <label class="inline-block mb-2">Email</label>
+    <input #email="ngModel" type="email" name="email" [(ngModel)]="credentials.email"
+           class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+                  duration-500 focus:outline-none rounded bg-transparent
+                  focus:border-indigo-400"
+           placeholder="Enter Email" required
+           pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"/>
+    <p *ngIf="email.errors && email.touched && email.dirty" class="text-red-400">
+      Email is invalid.
+    </p>
+  </div>
+  <!-- Password -->
+  <div class="mb-3">
+    <label class="inline-block mb-2">Password</label>
+    <input #password="ngModel" type="password" name="password" [(ngModel)]="credentials.password"
+           class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+                duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+           placeholder="Password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"/>
+
+    <ng-container *ngIf="password.errors && password.touched && password.dirty">
+      <p *ngIf="password.errors?.['required']" class="text-red-400">
+        Password is required
+      </p>
+      <p *ngIf="password.errors?.['pattern']" class="text-red-400">
+        Passwords must be at least 8 characters long, have 1 uppercase letter, 1 lowercase letter, and 1 number.
+      </p>
+    </ng-container>
+  </div>
+  <button type="submit" [disabled]="loginForm.invalid || inSubmission"
+          class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition
+                hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400">
+    Submit
+  </button>
+</form>
+
